--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,7 @@
 
     <!-- Model-Viewer -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <title>React App</title>
   </head>
   <body>
